<resources>
    <string name="app_name">Bot_client_v2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Account</string>
    <string name="title_notifications">Logs</string>
    <string name="main_connected">Connected!</string>
    <string name="main_not_connected">Losing Connection from server…</string>
    <string name="clock_bot">设备</string>
    <string name="clock_detail_reminder">⚠ 闹钟将于 … 响铃</string>
    <string name="clock_detail_cron">eg. "0 10 9 * *"（每日早九点十分）</string>
    <string name="clock_detail_cron_tab">Crontab</string>
    <string name="clock_detail_text">请输入文字</string>
    <string name="clock_detail_text_tab">文字内容</string>
    <string name="clock_detail_delete">Delete this Clock</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_clock_detail">ClockDetailActivity</string>
    <string name="prompt_email"> </string>
    <string name="prompt_password"> </string>
    <string name="action_sign_in"> </string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="title_activity_add">AddActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="illegal_cron">非法 cron 表达式</string>
</resources>