<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.bot_client_v2.ui.home.ClockFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_clock" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.bot_client_v2.ui.account.AccountFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.bot_client_v2.ui.log.LoggFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_log" />
</navigation>